[gd_scene load_steps=6 format=3 uid="uid://cvq1vj2cmxngu"]

[ext_resource type="Script" uid="uid://conykg5jke6tb" path="res://scripts/ui/components/SkillTapMeter.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://b87fjwx31kgm0" path="res://assets/fonts/GlitchGoblin.ttf" id="2_ccaux"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skill_bg"]
bg_color = Color(0.101961, 0.101961, 0.137255, 0.796078)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sweet_spot"]
bg_color = Color(0, 0.8, 0.8, 0.6)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 1, 1, 0.8)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0, 1, 1, 0.6)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slider"]
bg_color = Color(1, 0, 0.8, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.4, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 1.0
expand_margin_right = 1.0
shadow_color = Color(1, 0, 1, 0.6)
shadow_size = 6

[node name="SkillTapMeter" type="Control"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 1
script = ExtResource("1_script")

[node name="BarBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_skill_bg")

[node name="SweetSpot" type="Panel" parent="BarBackground"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -15.0
offset_right = 140.0
offset_bottom = 15.0
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sweet_spot")

[node name="Slider" type="Panel" parent="BarBackground"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 3.0
offset_right = 10.0
offset_bottom = -3.0
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_slider")

[node name="ClickArea" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="SliderMoveTimer" type="Timer" parent="."]
wait_time = 0.016

[node name="TimeoutTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="GspotLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 250.0
offset_bottom = 89.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_ccaux")
theme_override_font_sizes/font_size = 39
text = "G-SPOT "
horizontal_alignment = 1
vertical_alignment = 1
